# evidence-gate

./: .dockerignore  .gitignore  API.md  BENCHMARKS.md  CONTRIBUTING.md  Dockerfile  GUIDES.md  LICENSE  README.md  VISION.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  (+2 more)
benchmarks/: README.md
dashboard/: next.config.ts  package-lock.json  package.json
docs/: 01_product_thesis.md  02_repo_asset_map.md  03_mvp_spec.md  04_execution_plan.md  05_repo_audit_and_delivery_gameplan.md  06_release_readiness_and_partner_path.md  07_mcp_server.md  08_partner_evaluation_guide.md  09_agent_skills.md  10_value_proof.md  11_agent_healing_demo.md  12_security_and_privacy.md
policies/: agile-frontend.yml  strict-financial.yml
runbooks/: live_connector_operations.md  mcp_agent_troubleshooting.md  required_check_operations.md
scripts/: fetch_live_exports.py  format_pr_comment.py  live_connector_exports.py  publish_agent_healing_demo.py  render_agent_healing_video.py  run_action_guardrail.py  run_agent_gate.py  run_container.sh  run_demo_sandbox.sh  run_fastapi_benchmark.py  run_mcp_stdio.sh  run_required_check.py  run_swebench_full_replay.py  run_value_proof_benchmarks.py  scaffold_agent_healing_demo.py  sync_live_exports.py  sync_sources.sh
sources/: SOURCE_INDEX.md
tests/: conftest.py  test_action_guardrail.py  test_agent_gate_script.py  test_api.py  test_audit_store.py  test_config.py  test_decision_service.py  test_fastapi_benchmark.py  test_ingestors.py  test_kb_cache.py  test_live_connector_exports.py  test_mcp_server.py  test_models.py  test_native_graph.py  test_policy_loader.py  test_required_check_script.py  test_structural_retrieval.py  test_value_proofs.py
(+87 files in other folders)
