[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-gate"
version = "0.1.0"
description = "Reliability layer for AI agents that gates actions on evidence and precedent."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["ai-reliability", "agent-guardrails", "evidence-based-ai", "mcp", "ci-gating"]
dependencies = [
  "fastapi>=0.115,<1.0",
  "mcp>=1.26,<2",
  "pyyaml>=6.0,<7.0",
  "pydantic>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "tree-sitter>=0.25,<0.26",
  "tree-sitter-javascript>=0.25,<0.26",
  "tree-sitter-typescript>=0.23,<0.24",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
evidence-gate-mcp = "evidence_gate.mcp.server:main"

[project.optional-dependencies]
dev = [
  "datasets>=2.20,<5.0",
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
